[package]
name = "wiko"
version = "0.1.0"
authors = ["Nadir Sampaoli <nadirsampaoli@gmail.com>"]

[dependencies]
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
chrono = { version = "^0", features = ["serde"] }
diesel = { version = "^0", features = ["postgres","chrono"] }
diesel_codegen = { version = "^0", features = ["postgres"] }
dotenv = "*"
iron = "*"
router = "*"

[dev-dependencies]
diesel = { version = "*", features = ["sqlite","chrono"] }
diesel_codegen = { version = "*", features = ["sqlite"] }
